--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -39,7 +39,8 @@ a {
 }
 
 .aligner-item {
-  max-width: 50%;
+  width: 90%;
+  max-width: 1200px;
   text-align: center;
 
   img.icon {
@@ -51,7 +52,7 @@ a {
 
   img.logo {
     width: 50%;
-    max-width: 388px;
+    min-width: 356px;
     min-width: 256px;
   }
 
