Add FB & Twitter Thumbnails

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,18 @@
     <meta name="email" content="hello@0xodyssey.com" />
     <meta name="website" content="https://0xodyssey.com" />
     <meta name="Version" content="v1.0.0" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://0xodyssey.com">
+    <meta property="og:title" content="0x Odyssey Studio • An epic journey on the metaverse">
+    <meta property="og:description" content="NFT & Crypto Studio based in Belgium">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://0xodyssey.com">
+    <meta property="twitter:title" content="0x Odyssey Studio • An epic journey on the metaverse">
+    <meta property="twitter:description" content="NFT & Crypto Studio based in Belgium">
+    <meta name=twitter:site content="@0xodyssey">
+    <meta property="og:image" content="/images/og-thumbnail.png">
+    <meta property="twitter:image" content="/images/twitter-thumbnail.png">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
