New Twitter account

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
     <meta property="twitter:url" content="https://0xodyssey.com">
     <meta property="twitter:title" content="0x Odyssey Studio • An epic journey on the metaverse">
     <meta property="twitter:description" content="NFT & Crypto Studio based in Belgium">
-    <meta name=twitter:site content="@0xodyssey">
+    <meta name=twitter:site content="@0xOdysseyStudio">
     <meta property="og:image" content="/images/og-thumbnail.png">
     <meta property="twitter:image" content="/images/twitter-thumbnail.png">
 
