--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,7 +12,7 @@ title: 0x Odyssey Studio • An epic journey on the metaverse
 
     <ul class="socials">
       <li>
-        <a href="https://twitter.com/0xOdyssey" class="animated" title="0x Odyssey Studio on Twitter">
+        <a href="https://twitter.com/0xOdysseyStudio" class="animated" title="0x Odyssey Studio on Twitter">
           <i class="fa-brands fa-twitter fa-2xl"></i>
         </a>
       </li>
