New color branding

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,18 +12,13 @@ title: 0x Odyssey Studio • An epic journey on the metaverse
 
     <ul class="socials">
       <li>
-        <a href="https://twitter.com/0xOdysseyStudio" class="animated" title="0x Odyssey Studio on Twitter">
-          <i class="fa-brands fa-twitter fa-2xl"></i>
+        <a href="https://twitter.com/0xOdysseyStudio" class="button" title="0x Odyssey Studio on Twitter">
+          <i class="fa-brands fa-twitter"></i> Follow on Twitter →
         </a>
       </li>
       <li>
-        <a href="https://www.instagram.com/0xodissey/" class="animated" title="0x Odyssey Studio on Instagram">
-          <i class="fa-brands fa-instagram fa-2xl"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://discord.gg/Zaa4r8yZyd" class="animated" title="0x Odyssey Studio on Discord">
-          <i class="fa-brands fa-discord fa-2xl"></i>
+        <a href="https://discord.gg/Zaa4r8yZyd" class="button outlined" title="0x Odyssey Studio on Discord">
+          <i class="fa-brands fa-discord"></i> Join Discord →
         </a>
       </li>
     </ul>
