--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,21 @@ title: 0x Odyssey Studio • An epic journey on the metaverse
     <br>
     <img src="/images/logo-black.png" class="logo" />
     <h2>An epic journey on the metaverse</h2>
-    <p>Launching cool stuff soon...</p>
+
+    <ul id="projects">
+      <li>
+        <a href="https://dickheads.club">
+          <img src="/images/dhc-icon.png" />
+          <h3>Dickheads Club NFT</h3>
+        </a>
+      </li>
+      <li>
+        <a href="https://nextdrop.art" title="Discover the best new NFT drops!">
+          <img src="/images/nextdrop-icon.png" />
+          <h3>NextDrop.art</h3>
+        </a>
+      </li>
+    </ul>
 
     <ul class="socials">
       <li>
