--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -74,6 +74,47 @@ a {
     max-width: 300px;
   }
 
+  ul#projects {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    li {
+      display: block;
+
+      a {
+        margin-left: 15px;
+        margin-right: 15px;
+        width: 140px;
+        height: 140px;
+        display: block;
+        background: rgba(0, 0, 0, .1);
+        padding: 40px 30px 20px 30px;
+        border-radius: 10px;
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+        transition: all .3s;
+
+        &:hover {
+          transform: translateY(-5px);
+        }
+
+        h3 {
+          font-size: 1em;
+          line-height: 1.4;
+        }
+
+        img {
+          width: 50%;
+          margin: 0 auto;
+          border-radius: 10px;
+        }
+      }
+    }
+  }
+
   ul.socials {
     list-style: none;
     margin: 0;
